--- a/star-rating.html
+++ b/star-rating.html
@@ -1,5 +1,7 @@
 <imports >
     <link rel="import" href="../polymer/polymer-element.html">
+    <link rel="import" href="../polymer/lib/elements/dom-repeat.html">
+    <link rel="import" href="../polymer/lib/elements/dom-if.html">
     <link rel="import" href="../paper-icon-button/paper-icon-button.html">
     <link rel="import" href="../iron-icons/iron-icons.html">
     <link rel="import" href="../iron-icon/iron-icon.html">
